kubernetes/n8n/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`n8n.local.dontddos.me`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
